2001-08-07  Wayne Davison  <wayned@users.sourceforge.net>

	* users/4092: Src/hist.c: Don't lose the last history line
	when a signal causes us to rewrite the history file.

2001-08-07  Oliver Kiddle  <opk@zsh.org>

	* 15594: Completion/Zsh/Context/_value,
	Completion/Zsh/Command/_enable: use _x_display when setting
	$DISPLAY and fix substitution mistake in enable completion

	* 15590: Completion/Zsh/Context/_equal: after 15586, we no
	longer want to complete aliases in the equal context

2001-08-07  Sven Wischnowsky  <wischnow@zsh.org>

	* 15588: Completion/Base/Completer/_approximate,
	Completion/Base/Utility/_describe, Completion/Unix/Command/_dd:
	make _dd not use already used specs; fix for selecting stuff to
	complete in _describe; fix for correction and _describe with
	grouped lists

2001-08-07  Peter Stephenson  <pws@csr.com>

	* 15586: Src/subst.c, Doc/Zsh/expn.yo: remove =alias expansion,
	so `=' only expands pathnames.  Hooray!

	* 15585: Doc/Zsh/contrib.yo, Functions/Zle/bash-down-case-word,
	Functions/Zle/bash-up-case-word: two new Zle functions with
	bash-style word boundaries.

	* 15583: Config/installfns.sh: ignore CVS directories for
	all function installations, not just with subdirectories.

2001-08-07  Sven Wischnowsky  <wischnow@zsh.org>

	* 15584: Src/parse.c: increment zwc file version (which means
	changing the magic number)

2001-08-06  Oliver Kiddle  <opk@zsh.org>

	* 15574: Completion/Unix/Command/_cvs, Completion/Unix/Command/_dd,
	Completion/Unix/Command/_dict, Completion/Unix/Command/_grep,
	Completion/Unix/Command/_loadkeys, Completion/Unix/Command/_ls,
	Completion/Unix/Command/_patch, Completion/Unix/Command/_user_admin,
	Completion/Unix/Command/_wget, Completion/Unix/Type/_diff_options,
	Completion/Unix/Type/_directories,  Completion/Unix/Type/_groups,
	Completion/Unix/Type/_users: new _user_admin for useradd, groupmod etc,
	rewrite of _dd to use _values and make more completions share
	descriptions for long and short options
